--- a/src/main/resources/zoom.properties
+++ b/src/main/resources/zoom.properties
@@ -1,5 +1,6 @@
 zoom.api.base.url=https://api.zoom.us/v2
 zoom.oauth.endpoint=https://zoom.us/oauth
+zoom.webhook.endpoint=http://localhost:9090/webhook/zoom
 
 ####CLIENT_CREDENTIALS_generalApp
 ZOOM_CLIENT_ID=vA1OUkkZSXKT23_w4vtsaQ
@@ -10,3 +11,6 @@ ZOOM_REDIRECT_URI=http://localhost:8080/zoom/get/auth
 ZOOM_SERVER_ACCOUNT_ID=RuKYKI0gRmioLXZxGXzq2Q
 ZOOM_SERVER_CLIENT_ID=ahYsTFrxR0q44XXEarwaIQ
 ZOOM_SERVER_CLIENT_SECRET=STP8vbni48LifaFu1RrLVGKfRtYwxV0j
+
+####ZOOM_WEBHOOK_SECRET_TOKEN
+zoom.webhook.secret.token=NbSl-uPgSEqW_eHMFUdewA
