--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=oauth
+spring.application.name=oauth_zoom
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:authdb
