feat : userlist DB 저장 & h2.file 설정변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=oauth_zoom
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:authdb
+spring.datasource.url=jdbc:h2:file:./data/authdb;AUTO_SERVER=TRUE
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=ad
 spring.datasource.password=pw
