feat : userList.status update 실패시 exception 큐목록에 error 담고 순차적으로 websocket 으로 사용자에게 전송.

--- a/src/main/resources/zoom.properties
+++ b/src/main/resources/zoom.properties
@@ -7,10 +7,10 @@ ZOOM_CLIENT_ID=vA1OUkkZSXKT23_w4vtsaQ
 ZOOM_CLIENT_SECRET=ll0dvK3D3bX0n2wSnYcZyyLBTFfkcQSC
 ZOOM_REDIRECT_URI=http://localhost:8080/zoom/get/auth
 
-####SERVER_CREDENTIALS_serverApp
+####SERVER_CREDENTIALS_serverApp : test_zoom@arisys.co.kr
 ZOOM_SERVER_ACCOUNT_ID=RuKYKI0gRmioLXZxGXzq2Q
-ZOOM_SERVER_CLIENT_ID=ahYsTFrxR0q44XXEarwaIQ
-ZOOM_SERVER_CLIENT_SECRET=STP8vbni48LifaFu1RrLVGKfRtYwxV0j
+ZOOM_SERVER_CLIENT_ID=MCyzk1tgQjS8ZqUvD4PHg
+ZOOM_SERVER_CLIENT_SECRET=AeRswN80Fp82Mrcf8bNi7zXugSA52BqJ
 
-####ZOOM_WEBHOOK_SECRET_TOKEN
-zoom.webhook.secret.token=NbSl-uPgSEqW_eHMFUdewA
+####ZOOM_WEBHOOK_SECRET_TOKEN : test_zoom@arisys.co.kr
+zoom.webhook.secret.token=EPeLeRwuTuaMJQOk5CU7Mw
