--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,11 +6,11 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=ad
 spring.datasource.password=pw
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.open-in-view: false
 
 logging.level.me.test=DEBUG
 
