--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,12 @@
             <version>4.2.2.Final</version>
             <classifier>osx-aarch_64</classifier>
         </dependency>
+
+<!--        PATCH 를 사용하기 위한 의존성 -->
+        <dependency>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
